2025-11-25  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with XML generation for user-locale (Bug 512581).

2025-11-23  Robby Stephenson  <robby@periapsis.org>

	* Updated BoardGameGeek data source to use bearer token (Bug 511824).

2025-11-09  Robby Stephenson  <robby@periapsis.org>

	* Updated Data Crow importer for new XML format, v5.

2025-10-26  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 4.1.4.

2025-10-13  Robby Stephenson  <robby@periapsis.org>

	* Updated iTunes source for better movie results.
	* Updated iTunes source to allow specifying country.

2025-10-06  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with matching entries with 979 ISBN prefixes (Bug 510329).

2025-09-11  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug in image location for temporary entry (Bug 508902).
	* Fixed bug in image location for new collections (Bug 509245).
	* Fixed crashing bug for collections without a title field.

2025-09-10  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug for opening truncated files (Bug 509364).

2025-09-07  Robby Stephenson  <robby@periapsis.org>

	* Updated saving to remove images no longer in collection (Bug 509244).

2025-09-06  Robby Stephenson  <robby@periapsis.org>

	* Updated OpenLibrary source to fetch plot (Bug 509124).

2025-09-03  Robby Stephenson  <robby@periapsis.org>

	* Updated OpenLibrary source to fetch notes (Bug 509062).

2025-08-31  Robby Stephenson  <robby@periapsis.org>

	* Updated OpenLibrary source to update via OLID, if available (Bug 508897).
	* Added importer for OnMyShelf JSON files.

2025-08-30  Robby Stephenson  <robby@periapsis.org>

	* Added KDE shortcut keys for previous/next tab (Bug 508789).

2025-08-24  Robby Stephenson  <robby@periapsis.org>

	* Updated GCstar importer to read external collection models (Bug 508664).
	* Added option for image links to GCstar importer (Bug 508665).
	* Updated CSV importer to load images.