@@ -1,3 +1,7 @@
+2025-12-24  Robby Stephenson  <robby@periapsis.org>
+
+	* Added option to change file preview size and increased default to 256.
+
 2025-11-25  Robby Stephenson  <robby@periapsis.org>
 
 	* Fixed bug with XML generation for user-locale (Bug 512581).
